fix: building stuff